--- a/src/components/Explorer/Explorer.module.scss
+++ b/src/components/Explorer/Explorer.module.scss
@@ -9,7 +9,7 @@
 }
 
 .container {
-  height: calc(100vh - 40px - 20px);
+  height: calc(100dvh - 40px - 20px);
   width: 20vw;
   border-right: 1px solid #202020;
   color: azure;
