--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   width: calc(75vw - 40px);
-  height: calc(100vh - 100px);
+  height: calc(100dvh - 100px);
   flex: 1;
   color: azure;
 
