--- a/src/pages/Projects/Projects.module.scss
+++ b/src/pages/Projects/Projects.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 100px);
+  height: calc(100dvh - 100px);
   width: calc(75vw - 40px);
   color: azure;
 
