--- a/src/styles/main.module.scss
+++ b/src/styles/main.module.scss
@@ -6,7 +6,7 @@
 html,
 body,
 #root {
-  height: calc(100vh - 40px - 20px);
+  height: 100dvh;
   margin: 0;
   padding: 0;
   background-color: #282c34;
@@ -24,7 +24,8 @@ h3 {
 }
 
 .editorContainer {
-  width: 100%;
+  max-width: 100%;
+  overflow: auto;
 }
 
 a {
